# com.protonvpn.www

./: .fedora-tracked-modules.yaml  .gitignore  AGENTS.md  README.md  bcrypt-cargo-sources.json  com.protonvpn.www.metainfo.xml  com.protonvpn.www.yml  flathub.json  pip-resources.proton-python-client.json  pip-resources.proton-vpn-cli.yaml  pip-resources.proton-vpn-gtk-app.yaml  pip-resources.python-proton-core.yaml  pip-resources.python-proton-keyring-linux.yaml  pip-resources.python-proton-vpn-api-core.yaml  pip-resources.python-proton-vpn-connection.yaml  pip-resources.python-proton-vpn-killswitch-network-manager.yaml  pip-resources.python-proton-vpn-network-manager.yaml  pip-resources.python-proton-vpn-session.yaml  pip-resources.python-skbuild.yaml  pip-resources.python3-protonvpn-nm-lib.json  test.yaml
.github/workflows/: test-fedora-flatpak-updater.yml  update-fedora-flatpak-deps.yml
patches/proton-vpn-gtk-app/: fix-gnome-detection.patch  fix-tray-icons.patch
patches/python-proton-vpn-api-core/: fix-ip-path.patch  fix-killswitch-auth.patch
patches/python-proton-vpn-killswitch-network-manager-wireguard/: avoid-hard-coding-ip-path.patch
scripts/: __init__.py
scripts/fedora_flatpak_updater/: README.md  pyproject.toml
scripts/fedora_flatpak_updater/src/fedora_flatpak_updater/: __init__.py  cargo_extractor.py  cli.py  fedora_release.py  manifest_patcher.py  mapping_loader.py  mdapi_client.py  migrate.py  models.py
scripts/fedora_flatpak_updater/src/fedora_flatpak_updater/recipes/: __init__.py  archive.py  git.py  pypi.py
tests/: __init__.py
tests/fedora_flatpak_updater/: __init__.py  (+9 more)
(+14 files in other folders)
