[project]
name = "fedora-flatpak-updater"
version = "0.1.0"
description = "Pins third-party Flatpak manifest dependencies to Fedora-stable versions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "ruamel.yaml>=0.19.1",
    "tenacity>=9.1.4",
    "click>=8.4.2",
    "tabulate>=0.10.0",
    "packaging>=26.2",
    # Required by flatpak-cargo-generator.py subprocess
    "aiohttp>=3.9.5",
    "tomlkit>=0.13.3",
    "PyYAML>=6.0.2",
]

[project.scripts]
fedora-flatpak-updater = "fedora_flatpak_updater.cli:main"
fedora-flatpak-updater-migrate = "fedora_flatpak_updater.migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "responses>=0.26.2",
]
